Wed Jul 30 18:34:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	  - The protocol tab is now only enabled if there are options inside it.

Wed Jul 30 18:31:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - Changing the protocol on the account editor's protocol drop-down
	    list now updates the whole account editor.

Tue Jul 29 01:39:54 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	  - Editting an account without a protocol no longer crashes qpe-gaim.

Tue Jul 29 01:35:52 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	  - Accounts without a protocol can no longer be connected to
	    or disconnected from.

Tue Jul 29 01:31:25 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - Updating the protocol list box on an account now updates
	    part of the Account tab.

Tue Jul 29 01:15:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	  - The edit and delete account buttons are disabled until an
	    account is selected.

Tue Jul 29 01:11:50 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	* src/QGaimAccountsWindow.cpp:
	  - The Add/Modify Account dialog is now of type QDialog.

Tue Jul 29 00:33:24 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	* src/QGaimProtocolBox.cpp:
	* src/QGaimProtocolBox.h:
	  - The protocol box is now set to the active protocol in the
	    account editor.

Tue Jul 29 00:06:46 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	  - Added an Edit button to the Accounts window.
